--- a/expenses_project/templates/authentication/login.html
+++ b/expenses_project/templates/authentication/login.html
@@ -1,28 +1,45 @@
 {% extends 'base_auth.html' %}
 
 {% block content %}
+<div class="container">
+  <div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
 
-<form>
-    <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+      <form action="" method="post">
+        <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+        <h1 class="h3 mb-3 fw-normal">Sign in</h1>
 
-    <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-      <label for="floatingInput">Email address</label>
-    </div>
-    <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-      <label for="floatingPassword">Password</label>
-    </div>
+        <div class="form-group">
+          <label for="usernameField">Username</label>
+          <input type="text" class="form-control" id="usernameField" placeholder="John Doe">
+        </div>
+    
+        <div class="form-group">
+          <label for="emailField">Email address</label>
+          <input type="email" class="form-control" id="emailField" placeholder="john.doe@example.com">
+        </div>
 
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
+        <div class="form-group">
+          <label for="passwordField">Password</label>
+          <input type="password" class="form-control" id="passwordField" placeholder="Password">
+          <small style="float: right;">show/hide</small>
+        </div> 
+    
+        <div class="checkbox mb-3">
+          <label>
+            <input type="checkbox" value="remember-me"> Remember me
+          </label>
+        </div>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+        <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
+    </form>
+
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-    <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
-</form>
+    <div class="col-md-4"></div>
+  </div>
+</div>
+
 
 {% endblock %}
 
