--- a/expenses_project/templates/authentication/register.html
+++ b/expenses_project/templates/authentication/register.html
@@ -8,28 +8,31 @@
     <div class="col-md-4"></div>
     <div class="col-md-4">
 
-      <form action="" method="post">
+      <form action="{% url 'register' %}" method="post" novalidate>
 
         {% csrf_token %}
 
         <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
         <h1 class="h3 mb-3 fw-normal">Register</h1>
 
+        <div class="form-group">{% include 'partial/messages.html' %}</div>
+
         <div class="form-group">
           <label for="usernameField">Username</label>
-          <input type="text" class="form-control" id="usernameField" placeholder="John Doe">
+          <input type="text" class="form-control" id="usernameField" name="username" placeholder="John Doe" value="{{ fieldValues.username }}">
           <div id="validationServerUsernameFeedback"></div>
         </div>
     
         <div class="form-group">
           <label for="emailField">Email address</label>
-          <input type="email" class="form-control" id="emailField" placeholder="john.doe@example.com">
+          <input type="email" class="form-control" id="emailField" name="email" placeholder="john.doe@example.com" value="{{ fieldValues.email }}">
+          <div id="validationServerEmailFeedback"></div>
         </div>
 
         <div class="form-group">
           <label for="passwordField">Password</label>
-          <input type="password" class="form-control" id="passwordField" placeholder="Password">
-          <small style="float: right;">show/hide</small>
+          <input type="password" class="form-control" id="passwordField" name="password" placeholder="Password">
+          <small type="button" class="btn btn-link" style="float: right;" id="passwordToggle">SHOW</small>
         </div> 
     
         <div class="checkbox mb-3">
@@ -37,7 +40,7 @@
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Register</button>
+        <button class="w-100 btn btn-lg btn-primary" id="register-account-btn" type="submit">Register</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
     </form>
 
