set up user registration and authentication backend

--- a/expenses_project/templates/authentication/register.html
+++ b/expenses_project/templates/authentication/register.html
@@ -33,6 +33,7 @@
           <label for="passwordField">Password</label>
           <input type="password" class="form-control" id="passwordField" name="password" placeholder="Password">
           <small type="button" class="btn btn-link" style="float: right;" id="passwordToggle">SHOW</small>
+          <div id="validationServerPasswordFeedback"></div>
         </div> 
     
         <div class="checkbox mb-3">
