--- a/expenses_project/templates/base_auth.html
+++ b/expenses_project/templates/base_auth.html
@@ -29,16 +29,34 @@
     
 
 
-<div class="container-fluid">
-  <div class="row">
 
-    <main>
-        {% block content %}
 
-        {% endblock %}
-    </main>
-  </div>
-</div>
+  <main class="container-fluid row">
+
+      <div class="col-md-4"></div>
+
+      <div class="col-md-4">
+
+        <div class="row">
+          {% block content %}
+
+          {% endblock %}
+        </div>
+
+        <div class="row">
+          <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
+        </div>
+
+      </div>
+
+
+      <div class="col-md-4"></div>
+
+    </div>
+
+  </main>
+
+
 
 
     <script src="/docs/5.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
