--- a/expenses_project/templates/base.html
+++ b/expenses_project/templates/base.html
@@ -22,37 +22,26 @@
     <link href="dashboard.css" rel="stylesheet">
   </head>
   <body>
-    
-<header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">Company name</a>
-  <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
-  <div class="navbar-nav">
-    <div class="nav-item text-nowrap">
 
-      <form action="{% url 'logout' %}" class="nav-link px-3" method="post">
-        {% csrf_token %}
-        <input class="btn btn-link link-light" type="submit" value="Sign out">
-      </form>
-      
-    </div>
-  </div>
-</header>
+      <div class="container-fluid">
 
-<div class="container-fluid">
-  <div class="row">
-    {% include 'partial/sidebar.html' %}
+        <div class="row">
+          {% include 'partial/sidebar.html' %}
 
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-      <div id="flashMessages">{% include 'partial/messages.html' %}</div>
-        {% block content %}
+            <main class="col-md-9 ms-sm-auto col-lg-10 md-4">
+              <div class="row">{% include 'partial/header_navbar.html' %}</div>
 
-        {% endblock %}
-    </main>
-  </div>
-</div>
+              <div class="row m-2">
+                <div class="row" id="flashMessages">{% include 'partial/messages.html' %}</div>
+                {% block content %}
+
+                {% endblock %}
+              </div>
+            </main>
+
+        </div>
+
+      </div>
 
 
     <script src="/docs/5.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
