--- a/expenses_project/templates/expenses/index.html
+++ b/expenses_project/templates/expenses/index.html
@@ -1,3 +1,150 @@
 {% extends 'base.html' %}
 
-<h2>Expenses List</h2>
+{% load static %}
+
+{% block content %}
+
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item active" aria-current="page">My Expenses</li>
+    </ol>
+</nav>
+
+<table class="table">
+    <thead class="table-light">
+      <tr>
+        <th>
+            Category
+            <a href="/expenses/?order_by=category"><img src="{% static 'img/sort-alpha-up.svg' %}" width="16" height="16"/></a>
+            <a href="/expenses/?order_by=-category"><img src="{% static 'img/sort-alpha-down.svg' %}" width="16" height="16"/></a>
+        </th>
+        <th>
+            Amount &lpar; $ {{ user_currency_symbol }} &rpar; 
+            <a href="/expenses/?order_by=amount"><img src="{% static 'img/sort-numeric-up.svg' %}" width="16" height="16"/></a>
+            <a href="/expenses/?order_by=-amount"><img src="{% static 'img/sort-numeric-down.svg' %}" width="16" height="16"/></a>
+        </th>
+        <th>Description</th>
+        <th>
+            Date
+            <a href="/expenses/?order_by=date"><img src="{% static 'img/sort-numeric-up.svg' %}" width="16" height="16"/></a>
+            <a href="/expenses/?order_by=-date"><img src="{% static 'img/sort-numeric-down.svg' %}" width="16" height="16"/></a>
+        </th>
+        <th>Edit / Delete</th>
+      </tr>
+    </thead>
+    <tbody>
+        {% for expense in all_user_expenses %}
+        <tr>
+            <td>{{ expense.category }}</td>
+            <td>{{ expense.amount }}</td>
+            <td>{{ expense.description }}</td>
+            <td>{{ expense.date }}</td>
+            <td>
+                <button onclick="getExpenseObj('{{ expense.id }}')" type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#editExpensesModal">
+                    <!-- edit icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                        <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                    </svg>
+                </button>
+                <button onclick="deleteExpenseObj('{{ expense.id }}')" type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteExpensesModal">
+                    <!-- trash icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                        <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
+                    </svg>
+                </button>
+            </td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+    <!-- Modal for Delete Expenses-->
+    <div class="modal fade" id="deleteExpensesModal" tabindex="-1" aria-labelledby="deleteExpensesModal" aria-hidden="true">
+        <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Expenses</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete this entry?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <form id="delete-expenses-form" action="" method="post" novalidate>
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-primary">Confirm</button>
+                </form>
+            </div>
+        </div>
+        </div>
+    </div>
+  
+  <!-- Modal for Edit Expenses -->
+  <div class="modal fade" id="editExpensesModal" tabindex="-1" aria-labelledby="editExpensesModal" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Edit Expenses</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+
+        <form id="edit-expenses-form" action="" method="post" novalidate>
+
+            <div class="modal-body">
+
+                    {% csrf_token %}
+
+                    <div class="mb-3">
+                        <label for="modal-amount" class="form-label">Amount</label>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">$ {{ user_currency_symbol }}</span>
+                            <input type="number" class="form-control" id="modal-amount" name="modal-amount" min="0" step=".01">
+                        </div>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="modal-date" class="col-sm-2 col-form-label">Date</label>
+                        <input type="date" class="form-control" id="modal-date" name="modal-date">
+                    </div>
+            
+                    <div class="mb-3">
+                        <label for="modal-description" class="col-sm-2 col-form-label">Description</label>
+                        <textarea class="form-control" placeholder="Enter expense description here." id="modal-description" style="height: 100px" name="modal-description"></textarea>
+                    </div>
+            
+                    <fieldset class="mb-3">
+                        <legend class="col-form-label col-sm-2 pt-0">Category</legend>
+                        <div class="col-sm-10">
+    
+                            {% for category_obj in categories %}
+            
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="modal-category" id="modal-category-{{ category_obj.category }}" value="{{ category_obj }}">
+                                <label class="form-check-label" for="modal-category-{{ category_obj.category }}">{{ category_obj.category }}</label>
+                            </div>
+                            {% endfor %}
+                        
+            
+                        </div>
+            
+                    </fieldset>
+
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Save changes</button>
+            </div>
+
+        </form>
+
+      </div>
+    </div>
+  </div>
+
+  <script src="{% static 'js/index.js' %}"></script>
+
+{% endblock %}
