--- a/expenses_project/templates/base_auth.html
+++ b/expenses_project/templates/base_auth.html
@@ -33,26 +33,24 @@
 
   <main class="container-fluid row">
 
-      <div class="col-md-4"></div>
+    
 
-      <div class="col-md-4">
 
-        <div class="row">
-          {% block content %}
+        <div class="col-md-4 position-absolute top-50 start-50 translate-middle">
 
-          {% endblock %}
+          <div class="row">
+            {% block content %}
+
+            {% endblock %}
+          </div>
+
+          <div class="row">
+            <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
+          </div>
+      
         </div>
 
-        <div class="row">
-          <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
-        </div>
 
-      </div>
-
-
-      <div class="col-md-4"></div>
-
-    </div>
 
   </main>
 
