--- a/expenses_project/templates/base.html
+++ b/expenses_project/templates/base.html
@@ -29,7 +29,23 @@
           {% include 'partial/sidebar.html' %}
 
             <main class="col-md-9 ms-sm-auto col-lg-10 md-4">
-              <div class="row">{% include 'partial/header_navbar.html' %}</div>
+
+              <nav class="row navbar bg-dark sticky-top bg-dark flex-md-nowrap p-0 shadow" style="height: 50px;">
+                <div class="col-md-8">
+                  {% block searchbar %}
+                  {% endblock %}
+                </div>
+
+                <div class="col-md-4 d-flex justify-content-end">
+                  <h6 class="m-2" style="color: white;">signed in as <strong>{{ request.user.username }}</strong></h6>
+                  <form action="{% url 'logout' %}" method="post">
+                    {% csrf_token %}
+                    <input class="btn btn-primary" type="submit" value="Sign out">
+                  </form>
+                </div>
+
+
+              </nav>
 
               <div class="row m-3">
                 <div class="row" id="flashMessages">{% include 'partial/messages.html' %}</div>
@@ -44,9 +60,8 @@
       </div>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-      <script src="/docs/5.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+      
+      
     
       <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" crossorigin="anonymous"></script>
