completed income and expenses app

--- a/expenses_project/templates/partial/sidebar.html
+++ b/expenses_project/templates/partial/sidebar.html
@@ -10,7 +10,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">
+        <a class="nav-link active" aria-current="page" href="{% url 'income-index' %}">
           <span data-feather="home" class="align-text-bottom"></span>
           My Income
         </a>
@@ -37,7 +37,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="{% url 'add-income' %}">
           <span data-feather="file-text" class="align-text-bottom"></span>
           Add Income
         </a>
