--- a/expenses_project/templates/authentication/login.html
+++ b/expenses_project/templates/authentication/login.html
@@ -8,7 +8,6 @@
 
     {% csrf_token %}
 
-    <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Sign in</h1>
 
     <div class="form-group" id="flashMessages">{% include 'partial/messages.html' %}</div>
@@ -29,8 +28,13 @@
         <input type="checkbox" value="remember-me"> Remember me
       </label>
     </div>
+
     <button class="w-100 btn btn-lg btn-primary" id="login-account-btn" type="submit">Sign in</button>
+
 </form>
+
+<div class="mt-3">New to Fat Cat? <a href="{% url 'register' %}">Sign up</a></div>
+<div class="mb-3">Forgot password? <a href="{% url 'forgot-password' %}">Reset</a></div>
 
 
 <script src="{% static 'js/login.js' %}"></script>
