--- a/expenses_project/templates/authentication/register.html
+++ b/expenses_project/templates/authentication/register.html
@@ -8,7 +8,6 @@
 
     {% csrf_token %}
 
-    <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Register</h1>
 
     <div class="form-group" id="flashMessages">{% include 'partial/messages.html' %}</div>
@@ -35,6 +34,7 @@
     <button class="w-100 btn btn-lg btn-primary" id="register-account-btn" type="submit">Register</button>
 </form>
 
+<div class="mt-3">Already have an account? <a href="{% url 'login' %}">Sign in</a></div>
 
 <script src="{% static 'js/register.js' %}"></script>
 {% endblock %}
