--- a/expenses_project/templates/partial/sidebar.html
+++ b/expenses_project/templates/partial/sidebar.html
@@ -50,7 +50,7 @@
     <ul class="nav flex-column mb-2">
 
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="{% url 'expenses-statistics-view' %}">
           <span data-feather="file-text" class="align-text-bottom"></span>
           Expenses Summary
         </a>
