charts rendering completed

--- a/expenses_project/templates/partial/sidebar.html
+++ b/expenses_project/templates/partial/sidebar.html
@@ -57,7 +57,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="{% url 'income-statistics-view' %}">
           <span data-feather="file-text" class="align-text-bottom"></span>
           Income Summary
         </a>
