added styling to side bar

--- a/expenses_project/templates/authentication/register.html
+++ b/expenses_project/templates/authentication/register.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block title %} 
+- Sign in
+{% endblock %}
+
 {% block content %}
 
   <form action="{% url 'register' %}" method="post" novalidate>
