--- a/expenses_project/templates/expenses/index.html
+++ b/expenses_project/templates/expenses/index.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block title %} 
+- My Expenses
+{% endblock %}
+
 {% block searchbar %}
     {% include 'partial/header_search.html' %}
 {% endblock %}
