--- a/expenses_project/templates/authentication/login.html
+++ b/expenses_project/templates/authentication/login.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block title %} 
+- Login
+{% endblock %}
+
 {% block content %}
 
   <form action="{% url 'login' %}" method="post" novalidate>
@@ -25,7 +29,7 @@
 
     <div class="checkbox mb-3">
       <label>
-        <input type="checkbox" value="remember-me"> Remember me
+        <input type="checkbox" id="remember-me" name="remember-me" value="remember-me"> Remember me
       </label>
     </div>
 
