--- a/expenses_project/templates/authentication/reset_password.html
+++ b/expenses_project/templates/authentication/reset_password.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block title %} 
+- Reset Password
+{% endblock %}
+
 {% block content %}
 
   <form action="{% url 'reset-password' uid tk %}" method="post" novalidate>
