--- a/expenses_project/templates/base_auth.html
+++ b/expenses_project/templates/base_auth.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.104.2">
-    <title>Dashboard Template 
+    <title>Fat Cat
         {% block title %} 
         {% endblock %}
     </title>
