--- a/expenses_project/templates/expenses/add_expenses.html
+++ b/expenses_project/templates/expenses/add_expenses.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %} 
+- Add Expenses
+{% endblock %}
+
 {% block content %}
 
 <nav aria-label="breadcrumb">
