--- a/expenses_project/templates/income/add_income.html
+++ b/expenses_project/templates/income/add_income.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %} 
+- Add Income
+{% endblock %}
+
 {% block content %}
 
 <nav aria-label="breadcrumb">
