--- a/expenses_project/templates/income/statistics.html
+++ b/expenses_project/templates/income/statistics.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block title %} 
+- Income Summary
+{% endblock %}
+
 {% block content %}
 
 <nav aria-label="breadcrumb">
