--- a/expenses_project/templates/userpreferences/index.html
+++ b/expenses_project/templates/userpreferences/index.html
@@ -1,30 +1,57 @@
 {% extends 'base.html' %}
 
+{% block title %} 
+- Settings
+{% endblock %}
+
 {% block content %}
 
-    <div class="container mt-2">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+        <li class="breadcrumb-item active" aria-current="page">General Settings</li>
+        </ol>
+    </nav>
+        
+    <div class="col-md-8 col-lg-8">
+      <h4 class="mb-3">Preferences</h4>
+        <div class="row g-3">
+            <label for="currencies-list" class="form-label">Currency <span class="mx-2 badge text-bg-dark">Current: $ {{ user_currency }}</span></label>
+            
+            <form action="{% url 'user-preferences' %}" method="post">
+                {% csrf_token %}
 
-        <form action="{% url 'user-preferences' %}" method="post">
+                <div class="row">
+                    <div class="col-md-6">
+                        <select class="form-select" id="currencies-list" name="currency">
 
-            {% csrf_token %}
+                            {% for currency in currencies %}
+                                {% if user_currency == currency.symbol %}
+                                    <option selected value="{{ currency.symbol }}">{{ currency.name }} &lpar; {{ currency.symbol }} &rpar; </option>
+                                {% else %}    
+                                    <option value="{{ currency.symbol }}">{{ currency.name }} &lpar; {{ currency.symbol }} &rpar; </option>
+                                {% endif %} 
+                            {% endfor %}
+        
+                        </select>
+                    </div>
 
-            <h6>Currency Preferences. Your current selection is $ {{ user_currency }}</h6>
-            <div class="input-group">
-                <select class="form-select" id="currencies-list" name="currency">
-    
-                    {% for currency in currencies %}
-                        {% if user_currency == currency.symbol %}
-                            <option selected value="{{ currency.symbol }}">{{ currency.name }} &lpar; {{ currency.symbol }} &rpar; </option>
-                        {% else %}    
-                            <option value="{{ currency.symbol }}">{{ currency.name }} &lpar; {{ currency.symbol }} &rpar; </option>
-                        {% endif %} 
-                    {% endfor %}
-    
-                </select>
-                <button class="btn btn-outline-secondary" type="submit">Save</button>
-            </div>
+                    <div class="col-md-2">
+                        <button class="btn btn-outline-secondary mx-1" type="submit">Save</button>
+                    </div>
+                </div>
 
-        </form>
+            </form>
 
+        </div>   
     </div>
+
+    <div class="col-md-8 col-lg-8 mt-3">
+        <h4 class="mb-3">Update Personal Information</h4>
+        <div class="row g-3">
+            <p>Feature under development. Stay tuned!</p>
+        </div>
+    </div>
+        
+
+
 {% endblock %}
