--- a/expenses_project/templates/authentication/forgot_password.html
+++ b/expenses_project/templates/authentication/forgot_password.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block title %} 
+- Forgot Password
+{% endblock %}
+
 {% block content %}
 
   <form action="{% url 'forgot-password' %}" method="post" novalidate>
