--- a/expenses_project/templates/partial/expenses_table.html
+++ b/expenses_project/templates/partial/expenses_table.html
@@ -3,6 +3,7 @@
         <td>{{ expense.category }}</td>
         <td>{{ expense.amount }}</td>
         <td>
+                {% if expense.description is not none %}
                 <div class="accordion-button" style="max-width: 400px;" data-bs-toggle="collapse" data-bs-target="#collapse-{{ expense.id }}" aria-expanded="false" aria-controls="collapse-{{ expense.id }}">
                     <button type="button" class="btn btn-outline-info btn-sm me-2">Expand</button>
                     <div class="d-inline-block text-truncate" style="max-width: 400px;">{{ expense.description }}</div>
@@ -12,6 +13,10 @@
                     <div class="accordion-body" style="max-width: 400px;">{{ expense.description }}</div>
                     </div>
                 </div>
+                {% else %}
+                    No description available &#128533;
+                {% endif %}
+
             
 
         </td>
