completed data export feature v2.0 complete

--- a/expenses_project/templates/base.html
+++ b/expenses_project/templates/base.html
@@ -49,7 +49,12 @@
               </nav>
 
               <div class="row m-3">
-                <div class="row" id="flashMessages">{% include 'partial/messages.html' %}</div>
+                <div class="row">
+                  <div class="col-md-2"></div>
+                  <div class="col-md-8" id="flashMessages">{% include 'partial/messages.html' %}</div>
+                  <div class="col-md-2"></div>
+                </div>
+                
                 {% block content %}
 
                 {% endblock %}
