--- a/expenses_project/templates/expenses/overview.html
+++ b/expenses_project/templates/expenses/overview.html
@@ -22,7 +22,7 @@
                 <h6 class="my-0">Nothing to show</h6>
                 <small class="text-muted">To get started, add an 
                   <a href="{% url 'add-expenses'%}">expense</a> or 
-                  <a href="{% url 'add-income'%}">expense</a> entry.
+                  <a href="{% url 'add-income'%}">income</a> entry.
                 </small>
               </div>
             </li>
