--- a/expenses_project/templates/userpreferences/index.html
+++ b/expenses_project/templates/userpreferences/index.html
@@ -17,7 +17,7 @@
         <div class="row g-3">
             <label for="currencies-list" class="form-label">Currency <span class="mx-2 badge text-bg-dark">Current: $ {{ user_currency }}</span></label>
             
-            <form action="{% url 'user-preferences' %}" method="post">
+            <form action="{% url 'change-currency' %}" method="post">
                 {% csrf_token %}
 
                 <div class="row">
@@ -36,7 +36,7 @@
                     </div>
 
                     <div class="col-md-2">
-                        <button class="btn btn-outline-secondary mx-1" type="submit">Save</button>
+                        <button class="btn btn-outline-secondary" type="submit">Save</button>
                     </div>
                 </div>
 
@@ -48,7 +48,45 @@
     <div class="col-md-8 col-lg-8 mt-3">
         <h4 class="mb-3">Update Personal Information</h4>
         <div class="row g-3">
-            <p>Feature under development. Stay tuned!</p>
+
+            <form action="{% url 'change-personal-particulars' %}" method="post" novalidate>
+                {% csrf_token %}
+            
+                <div class="form-group">
+                  <label for="usernameField">Username</label>
+                  <input type="text" class="form-control mb-2" id="usernameField" name="new-username" placeholder="John Doe" value="{{ user.username }}">
+                  <div id="validationServerUsernameFeedback"></div>
+                </div>
+            
+                <div class="form-group">
+                  <label for="emailField">Email address</label>
+                  <input type="email" class="form-control mb-2" id="emailField" name="new-email" placeholder="john.doe@example.com" value="{{ user.email }}">
+                  <div id="validationServerEmailFeedback"></div>
+                </div>
+            
+                <div class="form-group">
+                  <label for="passwordField">Old Password</label>
+                  <input type="password" class="form-control mb-2" id="oldPasswordField" name="old-password" placeholder="Old Password">
+                  <div id="validationServerOldPasswordFeedback"></div>
+                </div> 
+
+                <div class="form-group">
+                  <label for="passwordField">New Password</label>
+                  <input type="password" class="form-control mb-2" id="newPasswordField" name="new-password" placeholder="New Password">
+                  <div id="validationServerNewPasswordFeedback"></div>
+                </div> 
+
+                <div class="form-group">
+                  <label for="passwordField">Confirm New Password</label>
+                  <input type="password" class="form-control mb-2" id="cfmPasswordField" name="confirm-password" placeholder="Confirm New Password">
+                  <div id="validationServerConfirmPasswordFeedback"></div>
+                </div> 
+
+                <div class="col-md-2">
+                    <button class="btn btn-outline-secondary mt-3" type="submit">Update</button>
+                </div>
+
+            </form>
         </div>
     </div>
         
