--- a/expenses_project/templates/income/index.html
+++ b/expenses_project/templates/income/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
 
-        <ul class="pagination justify-content-end">
+        <ul class="col pagination justify-content-end">
 
             <li class="page-item">
                 <a class="page-link" href="?page=1" aria-label="First">
