--- a/expenses_project/templates/expenses/index.html
+++ b/expenses_project/templates/expenses/index.html
@@ -158,7 +158,7 @@
 
                     <div class="mb-3">
                         <label for="modal-date" class="col-sm-2 col-form-label">Date</label>
-                        <input type="date" class="form-control" id="modal-date" name="modal-date">
+                        <input type="date" class="form-control" id="modal-date" max="{{ today }}" name="modal-date">
                     </div>
             
                     <div class="mb-3">
