--- a/expenses_project/templates/income/add_income.html
+++ b/expenses_project/templates/income/add_income.html
@@ -31,7 +31,7 @@
         <div class="row mb-3">
           <label for="date" class="col-sm-2 col-form-label">Date</label>
           <div class="col-sm-10">
-            <input type="date" class="form-control" id="date" name="date" value="{{ dict_fields.date }}">
+            <input type="date" class="form-control" id="date" name="date" max="{{ today }}" value="{{ dict_fields.date }}">
           </div>
         </div>
 
